kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-service
spec:
  selector:
    app: homework
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
